Multithreading is completed