@@ -1,17 +1,15 @@
 package com.dmdev.oop.lesson25.queue;
 
-import java.util.ArrayDeque;
 import java.util.List;
-import java.util.Queue;
-import java.util.stream.Collectors;
+import java.util.concurrent.ArrayBlockingQueue;
+import java.util.concurrent.BlockingQueue;
 import java.util.stream.Stream;
 
 public class CashboxRunner {
 
     public static void main(String[] args) throws InterruptedException {
-        Queue<Cashbox> cashboxes = new ArrayDeque<>(List.of(
-                new Cashbox(), new Cashbox()
-        ));
+        BlockingQueue<Cashbox > cashboxes =
+                new ArrayBlockingQueue<>(2, true, List.of(new Cashbox(), new Cashbox()));
 
         List<Thread> threads = Stream.of(
                 new BuyerThread(cashboxes),
@@ -25,7 +23,7 @@ public class CashboxRunner {
         )
                 .map(Thread::new)
                 .peek(Thread::start)
-                .collect(Collectors.toList());
+                .toList();
 
         for (Thread thread : threads) {
             thread.join();
